--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Home page</title>
-</head>
-<body>
-  <h1>Welcome to the Home Page</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<header class="masthead bg-index text-white text-center py-4">
+  <div class="container d-flex align-items-center flex-column pt-2">
+    <h2>Outdeed</h2>
+    <p>Your Ticket to Unlimited Opportunities!</p>
+  </div>
+</header>
+
+<!-- Welcome section -->
+<div class="p-3 text-center">
+  <h3>Welcome to Outdeed — your gateway to career opportunities!</h3>
+</div>
+{% endblock content %}
