--- a/home/templates/home/seeker_status.html
+++ b/home/templates/home/seeker_status.html
@@ -1,8 +1,32 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="continer">
+<div class="container py-4">
   <h2>{{ template_data.title }}</h2>
   <hr>
-  <p>content for {{ template_data.title }}.</p>
+
+  {% if applications %}
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Job</th>
+          <th>Company</th>
+          <th>Status</th>
+          <th>Last Updated</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for app in applications %}
+        <tr>
+          <td>{{ app.job.title }}</td>
+          <td>{{ app.job.company }}</td>
+          <td>{{ app.get_status_display }}</td>
+          <td>{{ app.updated_at|date:"Y-m-d H:i" }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+    <p>You haven’t applied to any jobs yet.</p>
+  {% endif %}
 </div>
 {% endblock %}
