--- a/outdeed/templates/base.html
+++ b/outdeed/templates/base.html
@@ -89,6 +89,19 @@
       {% endblock content %}
     </main>
 
+    {% if messages %}
+  <div class="container mt-3">
+    {% for message in messages %}
+      <div class="alert 
+                  {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} 
+                  alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
+
     <!-- Footer -->
     <footer class="bg-dark text-white pt-5 pb-4">
       <div class="container">
