removed searchbar, fixed save button bugs

--- a/home/templates/home/seeker_profile.html
+++ b/home/templates/home/seeker_profile.html
@@ -32,6 +32,7 @@
       <div class="form-text">One per line (LinkedIn, GitHub, portfolio…)</div>
     </div>
     <button type="submit" class="btn btn-dark">Save</button>
+    <a class="btn btn-secondary" href="{% url 'seeker.settings' %}">Cancel</a>
   </form>
 </div>
 {% endblock %}
