--- a/home/templates/home/seeker_settings.html
+++ b/home/templates/home/seeker_settings.html
@@ -3,7 +3,7 @@
 <div class="continer">
   <h2>{{ template_data.title }}</h2>
   <hr>
-  <a href="{% url 'seeker.profile' %}" class="btn btn-dark">My Profile</a>
+  <a href="{% url 'seeker.profile' %}" class="btn btn-dark">Edit My Profile</a>
 
 </div>
 {% endblock %}
