--- a/home/templates/home/admin_manage_users.html
+++ b/home/templates/home/admin_manage_users.html
@@ -23,7 +23,7 @@
   </form>
 
   <ul>
-    {% for user in users %}
+    {% for users in template_data %}
       <li>
         {{ user.username }} - {{ user.profile.role }}
         {% if user.profile.role != ADMIN %}
